<resources>
    <string name="app_name">Commands for CS GO</string>
    <string name="rcon_password_has_o" translatable="false"><![CDATA[rcon_password <hasło>]]></string>
    <string name="rcon_sv_password_has_o" translatable="false"><![CDATA[rcon sv_password <hasło>]]></string>
    <string name="rcon_changelevel_nazwa_mapy" translatable="false"><![CDATA[rcon changelevel <nazwa mapy>]]></string>
    <string name="viewrcon_exec_nazwa_pliku" translatable="false"><![CDATA[Viewrcon exec <nazwa pliku>]]></string>
    <string name="wczytuje_config_na_serwer">Loads the config on the server.</string>
    <string name="zmiana_mapy_na_serwerze">Changing the map on the server.</string>
    <string name="ustalamy_has_o_na_serwer">We set a password for the server.</string>
    <string name="podajemy_has_o_rcon_do_zarz_dzania_serwerem">We provide the rcon password for server management.</string>
    <string name="_1_w_cza_okno_powitalne_podczas_do_czania_na_serwer_0_wy_cza">1 Enables the welcome window when joining a server. 0 turns off.</string>
    <string name="cl_disablehtmlmotd_1_0" translatable="false">cl_disablehtmlmotd 1/0</string>
    <string name="_1_w_cza_podpowiedzi_w_grze_0_wy_cza">1 Enables hints in the game. 0 Turns off.</string>
    <string name="cl_showhelp_1_0" translatable="false">cl_showhelp 1/0</string>
    <string name="g_osowanie_na_przerw_podczas_trybu_turniejowego">Voting for a break during tournament mode</string>
    <string name="mp_team_timeout_time" translatable="false">mp_team_timeout_time</string>
    <string name="komendy_na_celownik">Crosshair commands</string>
    <string name="radar">Radar</string>
    <string name="boty">Boty</string>
    <string name="komendy_do_wicze">Exercise commands</string>
    <string name="komendy_na_bronie">Weapon commands</string>
    <string name="komendy_na_granaty">Grenade commands:</string>
    <string name="fps" translatable="false">FPS</string>
    <string name="button" translatable="false">Button</string>
    <string name="hud" translatable="false">Hud</string>
    <string name="myszka">mouse</string>
    <string name="pozycja_broni">Weapon position</string>
    <string name="zarz_dzanie_serwerem">Server Management</string>
    <string name="d_wi_k">Sound</string>
    <string name="cze">Link</string>
    <string name="nagrywanie_obs_uga_dema">Recording / Demo support</string>
    <string name="inne">Other</string>
    <string name="rozpoczyna_nagrywanie_demka">Starts recording the demo.</string>
    <string name="stop" translatable="false">stop</string>
    <string name="zatrzymuje_nagrywanie_demka">Stops recording the demo.</string>
    <string name="record_nazwa_dema" translatable="false"><![CDATA[record <nazwa dema>]]></string>
    <string name="odtwarza_nagrane_demko">Plays the recorded demo</string>
    <string name="playdemo" translatable="false">playdemo</string>
    <string name="otwiera_okno_do_zarz_dzania_demkiem_mo_liwo_przewijania_zwolniony_czas_itp">Opens a window for managing the demo - Scroll, Slow time, etc.</string>
    <string name="demoui" translatable="false">demoui</string>
    <string name="wy_cza_ca_y_hud_z_wyj_tkiem_celownika_oraz_informacji_kto_kogo_zabi">Turns off all hud except the crosshair and who killed him.</string>
    <string name="cl_draw_only_deathnotices_1" translatable="false">cl_draw_only_deathnotices 1</string>
    <string name="wy_cza_ca_kowicie_hud">Disables hud completely.</string>
    <string name="cl_drawhud_0" translatable="false">cl_drawhud 0</string>
    <string name="wy_czenie_modelu_broni">Exclusion of a weapon model</string>
    <string name="r_drawviewmodel_0" translatable="false">r_drawviewmodel 0</string>
    <string name="wy_czenie_czatu_go_tv">Turn off chat gotv</string>
    <string name="tv_nochat_0" translatable="false">tv_nochat 0</string>
    <string name="ilo_bot_w_na_serwerze">Number of bots on the server.</string>
    <string name="bot_kick" translatable="false">bot_kick</string>
    <string name="bot_quota_x" translatable="false">bot_quota X</string>
    <string name="wyrzuca_wszystkie_boty_z_serwera">Ejects all bots from the server</string>
    <string name="dodaje_bota_po_stronie_ct">Adds a bot on the CT side</string>
    <string name="bot_add_ct" translatable="false">bot_add_ct</string>
    <string name="dodaje_bota_po_stronie_t">Adds a bot on the T side.</string>
    <string name="bot_add_t" translatable="false">bot_add_t</string>
    <string name="boty_nie_strzelaj">Bots don\'t shoot</string>
    <string name="bot_dont_shoot_1" translatable="false">bot_dont_shoot 1</string>
    <string name="boty_zatrzymuj_si_w_miejscu">The bots stop in place</string>
    <string name="bot_stop_1" translatable="false">bot_stop 1</string>
    <string name="ustawianie_bota">Set the bot</string>
    <string name="bot_place" translatable="false">bot_place</string>
    <string name="poziom_trudno_ci_bot_w">Difficulty level of bots</string>
    <string name="bot_difficulty_0_1_2_3" translatable="false">bot_difficulty 0, 1, 2, 3</string>
    <string name="zmienia_rodzaj_celownika_1_5">Changes the type of viewfinder 1-5</string>
    <string name="zmienia_przerw_mi_dzy_kreskami_w_celowniku">Changes the gap between the crosshairs in the viewfinder.</string>
    <string name="cl_crosshairsize" translatable="false">cl_crosshairsize</string>
    <string name="zmienia_wielko_celownika">Changes the viewfinder size.</string>
    <string name="cl_crosshairstyle" translatable="false">cl_crosshairstyle</string>
    <string name="cl_crosshairgap" translatable="false">cl_crosshairgap</string>
    <string name="zmienia_grubo_celownika">Changes the thickness of the crosshair.</string>
    <string name="cl_crosshairthicknes" translatable="false">cl_crosshairthicknes</string>
    <string name="komenda_na_kropk_w_celowniku_0_wy_cza_1_w_cza">Command on the dot in the crosshair - 0 turns off 1 turns on.</string>
    <string name="cl_crosshairdot_0_1" translatable="false">cl_crosshairdot 0/1</string>
    <string name="zmienia_prze_roczysto_celownika">Changes the viewfinder transparency.</string>
    <string name="cl_crosshairalpha" translatable="false">cl_crosshairalpha</string>
    <string name="zmiana_koloru_celownika">Changing the viewfinder color:</string>
    <string name="cl_crosshaircolor_r_0_255" translatable="false">cl_crosshaircolor_r 0-255</string>
    <string name="cl_crosshaircolor_g_0_255" translatable="false">cl_crosshaircolor_g 0-255</string>
    <string name="cl_crosshaircolor_b_0_255" translatable="false">cl_crosshaircolor_b 0-255</string>
    <string name="cl_crosshaircolor_0_10" translatable="false">cl_crosshaircolor 0-10</string>
    <string name="voice_enable_0_1" translatable="false">voice_enable 0/1</string>
    <string name="snd_mixahead" translatable="false">snd_mixahead</string>
    <string name="ustala_op_nienie_d_wi_ku">Sets the sound delay</string>
    <string name="volume" translatable="false">volume</string>
    <string name="w_cza_lub_wy_cza_komunikacj_g_osow_w_poczekalni">Turns on or off the voice communication in the waiting room.</string>
    <string name="lobby_voice_chat_enabled_0_1" translatable="false">lobby_voice_chat_enabled 0/1</string>
    <string name="ustala_g_o_no_komunikacji_g_osowej">Sets the volume of voice communication</string>
    <string name="voice_scale" translatable="false">voice_scale</string>
    <string name="ustala_og_ln_g_o_no_muzyki_w_grze">Sets the overall volume of music in the game.</string>
    <string name="snd_musicvolume" translatable="false">snd_musicvolume</string>
    <string name="ustala_g_o_no_muzyki_na_pocz_tku_rundy">Sets the music volume at the beginning of the round</string>
    <string name="snd_roundstart_volume" translatable="false">snd_roundstart_volume</string>
    <string name="ustala_g_o_no_muzyki_w_ostatnich_sekundach_rundy">Sets the music volume in the last seconds of the round</string>
    <string name="rate_128000" translatable="false">rate „128000”</string>
    <string name="cl_updaterate_128" translatable="false">cl_updaterate „128”</string>
    <string name="cl_cmdrate_128" translatable="false">cl_cmdrate „128”</string>
    <string name="cl_interp_0" translatable="false">cl_interp „0”</string>
    <string name="cl_interp_ratio_1" translatable="false">cl_interp_ratio „1”</string>
    <string name="snowball">Snowball</string>
    <string name="give_weapon_snowball" translatable="false">give weapon_snowball</string>
    <string name="usp" translatable="false">USP</string>
    <string name="give_weapon_usp_silencer" translatable="false">give weapon_usp_silencer</string>
    <string name="desert_eagle" translatable="false">Desert eagle</string>
    <string name="give_weapon_fiveseven" translatable="false">give weapon_fiveseven</string>
    <string name="fiveseven" translatable="false">FiveseveN</string>
    <string name="give_weapon_elite" translatable="false">give weapon_elite</string>
    <string name="dual_berettas" translatable="false">Dual Berettas</string>
    <string name="give_weapon_deagle" translatable="false">give weapon_deagle</string>
    <string name="glock_18" translatable="false">Glock-18</string>
    <string name="give_weapon_glock" translatable="false">give weapon_glock</string>
    <string name="p2000" translatable="false">P2000</string>
    <string name="give_weapon_hkp2000" translatable="false">give weapon_hkp2000</string>
    <string name="p250" translatable="false">P250</string>
    <string name="give_weapon_p250" translatable="false">give weapon_p250</string>
    <string name="tec9" translatable="false">Tec9</string>
    <string name="give_weapon_tec9" translatable="false">give weapon_tec9</string>
    <string name="cz75_auto" translatable="false">CZ75-Auto</string>
    <string name="give_weapon_cz75a" translatable="false">give weapon_cz75a</string>
    <string name="r8_revolver" translatable="false">R8-Revolver</string>
    <string name="give_weapon_revolver" translatable="false">give weapon_revolver</string>
    <string name="diversion_device" translatable="false">Diversion Device</string>
    <string name="give_weapon_bumpmine" translatable="false">give weapon_bumpmine</string>
    <string name="exojump" translatable="false">exojump</string>
    <string name="exo_jump" translatable="false">Exo jump</string>
    <string name="give_weapon_shield" translatable="false">give weapon_shield</string>
    <string name="ballistic_shield" translatable="false">Ballistic shield</string>
    <string name="bump_mine">Bump Mine</string>
    <string name="give_weapon_tablet" translatable="false">give weapon_tablet</string>
    <string name="tablet">Tablet</string>
    <string name="give_weapon_frag" translatable="false">give weapon_frag</string>
    <string name="frag_grenade">Frag Grenade</string>
    <string name="give_weapon_firebomb" translatable="false">give weapon_firebomb</string>
    <string name="firebomb">Firebomb</string>
    <string name="give_weapon_diversion" translatable="false">give weapon_diversion</string>
    <string name="turret">Turret</string>
    <string name="ent_create_dronegun" translatable="false">ent_create dronegun</string>
    <string name="ent_create_drone" translatable="false">ent_create drone</string>
    <string name="give_item_cash" translatable="false">give item_cash</string>
    <string name="ammo_box" translatable="false">Ammo Box</string>
    <string name="ent_create_prop_ammo_box_generic" translatable="false">ent_create prop_ammo_box_generic</string>
    <string name="parachute" translatable="false">Parachute</string>
    <string name="ent_create_prop_weapon_upgrade_chute" translatable="false">ent_create prop_weapon_upgrade_chute</string>
    <string name="special_target">Special target</string>
    <string name="ent_create_prop_weapon_upgrade_contractkill" translatable="false">ent_create prop_weapon_upgrade_contractkill</string>
    <string name="money">Money</string>
    <string name="the_amazon_drone">The Amazon Drone</string>
</resources>