<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/adView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_128000"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cl_updaterate_128"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cl_cmdrate_128"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cl_interp_0"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cl_interp_ratio_1"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-4834003578511022/4679805754"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>